Minor cosmetic change

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         return d;
       }
 
-      var title = createType({text: "U.S. Population By Age, January 2000 in millions"});
+      var title = createType({text: "U.S. Population By Age, January 2000, in millions"});
       title.position.set(-chartwidth/2, chartheight + 10, -5);
       scene.add(title);
 
